syntax = "proto3";

option java_multiple_files = true;
option java_package = "fruitbox.iam.user";
option java_outer_classname = "UserProto";

package fruitbox_iam.v1;

import "ultimate_api/v1/page.proto";

service UserService {
  rpc Find(FindUserRequest) returns (UserDto) {}

  rpc Create(CreateUserRequest) returns (UserDto) {}

  rpc Update(UpdateUserRequest) returns (UserDto) {}

  rpc Page(PageUserRequest) returns (PageUserReply) {}
}

message UserDto {
  int64 id = 1;
  string name = 2;
  optional string email = 3;
  optional string phone = 4;
  int32 status = 5;
  int64 cid = 6;
  int64 ctime = 7;
  optional int64 mid = 8;
  optional int64 mtime = 9;
}

message FindUserRequest { int64 id = 1; }

message CreateUserRequest {
  optional string name = 1;
  optional string email = 2;
  optional string phone = 3;
  optional int32 status = 4;
  optional string password = 5;
}

message UpdateUserRequest {
  int64 id = 1;
  optional string name = 2;
  optional int32 status = 3;
}

message PageUserRequest {
  ultimate_api.v1.Pagination pagination = 1;
  FilterUserRequest filter = 2;
}

message FilterUserRequest {
  optional string name = 3;
  optional string email = 4;
  optional string phone = 5;
  optional int32 status = 6;
}

message PageUserReply {
  ultimate_api.v1.Page page = 1;
  repeated UserDto records = 2;
}
